# deskmate

./: CHANGELOG.md  Cargo.toml  README.md  README.zh.md  deny.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  package.json  pnpm-lock.yaml
apps/desktop/src/: App.tsx  api.ts  clipboard.ts  events.ts  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  Tauri.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  commands.rs  history.rs  lib.rs  locale.rs  main.rs  settings.rs  state.rs
apps/desktop/src-tauri/src/commands/: mod.rs  prefs.rs  receive.rs  send.rs
apps/desktop/src-tauri/windows/: hooks.nsh
apps/desktop/src/components/: ClearButton.tsx  HistoryList.tsx  MessageComposer.tsx  Radar.tsx  TransferPanel.tsx
apps/desktop/src/components/modals/: HistoryModal.tsx  ModalShell.tsx  OfferModal.tsx  PeerActionModal.tsx  PinModal.tsx  SettingsModal.tsx  index.ts
apps/desktop/src/hooks/: useDeskmate.ts
apps/desktop/src/i18n/: en.ts  index.tsx  zh.ts
crates/deskmate-cli/: Cargo.toml
crates/deskmate-cli/src/: commands.rs  main.rs  output.rs
crates/deskmate-core/: Cargo.toml
crates/deskmate-core/src/: config.rs  discovery.rs  identity.rs  lib.rs  protocol.rs  tls.rs
crates/deskmate-core/src/transfer/: io_tuning.rs  mod.rs  receiver.rs  sender.rs  tests.rs
crates/deskmate-core/tests/: discovery_update.rs
