### deskmate workspace

[workspace]
resolver = "3"
members = [
    "crates/deskmate-core",
    "crates/deskmate-cli",
    "apps/desktop/src-tauri",
]

### 项目共享配置
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["Zero <zero9501@outlook.com>"]
homepage = "https://github.com/zlx2019/deskmate"
repository = "https://github.com/zlx2019/deskmate"
license = "MIT"
readme = "README.md"

### 统一依赖版本 && 共享依赖
[workspace.dependencies]
# 内部核心依赖
deskmate-core = { path = "crates/deskmate-core" }
tokio = { version = "1", features = ["full"] }
# TLS 1.3 与自签证书
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1"
rcgen = "0.14"
# mDNS/DNS-SD 服务发现
mdns-sd = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"
fs4 = "1"
clap = { version = "4", features = ["derive"] }
# 底层 socket 选项(组播地址复用 / IPv6 双栈)
socket2 = "0.6"

### Lint rules
[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"

### Production packaging configuration
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

### Debug packaging configuration
[profile.dev]
