[package]
name = "deskmate-cli"
description = "deskmate cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
deskmate-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[lints]
workspace = true
