[package]
name = "deskmate-core"
description = "deskmate core engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
socket2.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
mdns-sd.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
hostname.workspace = true

[dev-dependencies]

[lints]
workspace = true
