[package]
name = "deskmate-core"
description = "deskmate core engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
socket2.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
mdns-sd.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
hostname.workspace = true
os_info.workspace = true

# 平台 IO 调优(transfer/io_tuning.rs): unix 侧 fcntl/fallocate, Windows 侧文件预分配
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]

[lints]
workspace = true
