[package]
name = "deskmate-desktop"
description = "deskmate desktop app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
# lib 名需与 bin 区分, Windows 下避免冲突(Tauri 模板约定)
name = "deskmate_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
deskmate-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
fs4.workspace = true
blake3.workspace = true
tauri = { version = "2", features = [
  "config-toml",
  "tray-icon",
  "image-png",
  "macos-private-api",
] }
# 系统窗口材质: macOS vibrancy / Windows mica(失败静默回退纯色)
window-vibrancy = "0.7"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# 系统通知(收到请求 / 传输完成等, Rust 侧直发)
tauri-plugin-notification = "2"
# 单实例锁: 防双开端口冲突, 二次启动唤起已有窗口
tauri-plugin-single-instance = "2"
# 开机自启(设置页开关)
tauri-plugin-autostart = "2"
# 系统剪贴板读写(剪贴板一键发送, 2026-07-14 批准)
tauri-plugin-clipboard-manager = "2"
# 全局快捷键(快捷键发送剪贴板, 2026-07-15 批准)
tauri-plugin-global-shortcut = "2"
